<resources>
    <string name="app_name">SmartTracker</string>

    <!-- labels -->
    <string name="appName">SmartTracker</string>
    <string name="exercises">Übungen</string>
    <string name="exerciseName">Übungsname</string>
    <string name="exerciseDescription">Übungsbeschreibung</string>
    <string name="repeats">Wiederholungen</string>

    <!-- activity_main Buttons -->
    <string name="shortTraining">5 Minuten Training</string>
    <string name="fullTraining">20 Minuten Training</string>
    <string name="ownTraining">eigenes Training</string>
    <string name="freeTraining">freie Übungswahl</string>
    <string name="title_activity_free_training">FreeTraining</string>

    <!-- activity_exercise -->
    <string name="b_start">Start</string>

    <!-- activity_exerciseExecution -->
    <string name="b_skip">Überspringen</string>
</resources>
