<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.kevin.smarttracker.MainActivity"
    android:background="#000000">

    <!--android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:text="@string/appName"
        android:id="@+id/textView"
        android:layout_weight="0.02"
        android:textSize="@dimen/abc_action_bar_progress_bar_size"
        android:gravity="center_vertical|center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shortTraining"
        android:id="@+id/shortTraining"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.02"
        android:textSize="24sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fullTraining"
        android:id="@+id/fullTraining"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02"
        android:textSize="24sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ownTraining"
        android:id="@+id/ownTraining"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02"
        android:textSize="24sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/freeTraining"
        android:id="@+id/freeTraining"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02"
        android:singleLine="false"
        android:textSize="24sp" />

</LinearLayout>
