<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.kevin.smarttracker.ExerciseExecution"
    android:background="#000000">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:text="@string/appName"
        android:id="@+id/textView"
        android:layout_weight="0.02"
        android:textSize="@dimen/abc_action_bar_progress_bar_size"
        android:gravity="center_vertical|center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercises"
        android:id="@+id/textView2"
        android:layout_weight="0.02"
        android:textStyle="bold"
        android:textIsSelectable="false"
        android:gravity="center_horizontal" />

    <VideoView
        android:layout_width="match_parent"
        android:layout_height="134dp"
        android:id="@+id/videoView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exerciseName"
        android:id="@+id/textView3"
        android:layout_weight="0.01"
        android:textStyle="bold"
        android:gravity="bottom|center_horizontal" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.01" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repeats"
        android:id="@+id/textView4"
        android:layout_weight="0.01"
        android:textStyle="bold"
        android:gravity="bottom|center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="4/10"
        android:id="@+id/textView5"
        android:layout_weight="0.01"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:text="@string/b_skip"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal" />

</LinearLayout>